# OmniRay

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: helpful_resources.md
example/kafka_ray/: kafka_ray_consumer.py  kafka_ray_producer.py
src/omniray/: __init__.py
src/omniray/batch_predictor/: __init__.py  auto_builder.py  vllm_batch_predictor.py
src/omniray/batch_predictor/servable_info/: __init__.py  base.py  vllm_servable_info.py
src/omniray/constants/: logging.py
src/omniray/dataloader/: __init__.py  base.py  huggingface_loader.py  kafka_streaming_loader.py  manager.py  numpy_loader.py  pandas_loader.py  torch_loader.py
src/omniray/model_registry/: __init__.py  base.py  mlflow_registry.py  s3_registry.py
src/omniray/predictor/: __init__.py  auto_builder.py  base.py  hf_transformers.py  torch.py  vllms.py
src/omniray/predictor/servable_info/: __init__.py  hf_transformers.py  torch.py  vllm_servable.py
src/omniray/utils/: logging.py
src/omnisearchsage/omnisearchsage/: features.py  model.py
