[project]
name = "omniray"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "aiokafka>=0.12.0",
    "boto3>=1.37.13",
    "botocore>=1.37.13",
    "datasets>=3.5.0",
    "mlflow>=2.21.0",
    "ray[default,serve]>=2.43.0",
    "torch>=2.6.0",
    "vllm>=0.8.2",
]
